fixed the styling issue where content was not centered.

--- a/notes-app/public/styles.css
+++ b/notes-app/public/styles.css
@@ -2,7 +2,7 @@ html, body {
   height: 100%;
 }
 
-#app {
+#mainContainer {
   height: inherit;
   margin: 0 auto;
   display: flex;
